Fix those kdedglobalaccel crashes. It's not safe to assume the config file has a correct content. Somehow it get's messed up sometimes and contains something like this:

next=Meta+B,Meta+B,
  nextTrack=Meta+B,Meta+B,

BUG:171870
CCBUG:171206

svn path=/trunk/KDE/kdelibs/; revision=866736